fixed question ask & edit rich editor line height when wrapping long text (#114)

--- a/frontend/src/components/AskAQuestionPage/QuestionForm/QuestionRichEditor/QuestionRichEditor.css
+++ b/frontend/src/components/AskAQuestionPage/QuestionForm/QuestionRichEditor/QuestionRichEditor.css
@@ -11,7 +11,6 @@
     margin-left: 25px;
     margin-right: 25px;
     min-height: 300px;
-    line-height: 0.4;
 }
 
 .question-editor-toolbar {
